apps/tandoor/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: tandoor
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tandoor
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor-ingress
  namespace: tandoor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: tandoor
      app.kubernetes.io/instance: tandoor
      app.kubernetes.io/name: tandoor
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
